--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             </div>
         </div>
 
+        <!-- libros -->
         <div class="row main-home container">
             <div class="header-main-home col-12 col-sm-12 col-md-12 col-lg-12">
                 <h1><i class="fas fa-bookmark"></i>Libros que seguro estas buscando</h1>
@@ -108,19 +109,19 @@
                 <img src="../assets/media/libros/la-vida-invisible-de.jpg" alt="La vida invisible de Deaddie Larue">
                 <h2>La vida Invisible de Addie Larue</h2>
                 <p><del>$2150</del>  $1800</p>
-                <a href="#" class="btn">Ver</a>
+                <a href="#" class="btn">Comprar</a>
             </div>
             <div class="books-content">
                 <img src="../assets/media/libros/lore.png" alt="">
                 <h2>Lore </h2>
                 <p>$1990</p>
-                <a href="#" class="btn">Ver</a>
+                <a href="#" class="btn">Comprar</a>
             </div>
             <div class="books-content">
                 <img src="../assets/media/libros/ultimo-mago.jpg" alt="">
                 <h2>El Ultimo Mago</h2>
                 <p>$1999</p>
-                <a href="#" class="btn">Ver</a>
+                <a href="#" class="btn">Comprar</a>
             </div>
         </div>
     
