--- a/index.html
+++ b/index.html
@@ -127,16 +127,19 @@
     
 </div>
 
-<footer>
-    <div class="footer-social">
+<footer class="row">
+    <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
+        <h3>Redes Sociales</h3>
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-pinterest"></i></a>
         <a href="#"><i class="fab fa-facebook"></i></a>
+    </div>
 
-        <ul class="footer-list">
+        <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
+            <h3>Navegacion</h3>
             <li>
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li>
                 <a href="#">Editorial</a>
@@ -151,10 +154,16 @@
                 <a href="#">Contact</a>
             </li>
         </ul>
+        <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
+            <h3>Libros</h3>
+            <li>Ficcion</li>
+            <li>Fantasia</li>
+            <li>Romance</li>
+            <li>Terror</li>
+        </ul>
         <p class="copyright">
             Editoriales mencionadas
         </p>
-    </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
