agregue contenido al footer

--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
             <li>Romance</li>
             <li>Terror</li>
         </ul>
+        <ul class="editoriales-footer col col-sm-12 col-md-6 col-lg-3">
+            <h3>Editoriales</h3>
+            <li>Salamandra</li>
+            <li>Umbriel</li>
+            <li>Naranja</li>
+        </ul>
         <p class="copyright">
             Editoriales mencionadas
         </p>
