--- a/index.html
+++ b/index.html
@@ -164,12 +164,16 @@
         <ul class="editoriales-footer col col-sm-12 col-md-6 col-lg-3">
             <h3>Editoriales</h3>
             <li>Salamandra</li>
-            <li>Umbriel</li>
+            <li>Hidra Editorial</li>
             <li>Naranja</li>
+            <li>Vyr Editorial</li>
+            <li>Puck Editorial</li>
         </ul>
-        <p class="copyright">
-            Editoriales mencionadas
-        </p>
+        <div class="row fila-copy-footer">
+            <p class="copyright col col-sm-12 col-md-12 col-lg-12">
+                Copyright © Editoriales mencionadas
+            </p>
+        </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
