--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atenas Productos</title>
+    <title>Atenas Home</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <div class="index container">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container atenas">
-                    <a class="logo navbar-brand" href="#">Atenas</a>
+                    <a class="logo navbar-brand" href="./index.html">Atenas</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active " aria-current="page" href="#">Inicio</a>
+                                <a class="nav-link active " aria-current="page" href="./index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="libros nav-link " href="#">Libros</a>
+                                <a class="libros nav-link " href="./views/productos.html">Libros</a>
                                 
                             </li>
                             <li class="nav-item">
