agregue slider de productos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<div class="container container-principal">
+    <div class="container container-principal">
         <div class="index container">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container atenas">
@@ -30,7 +30,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="libros nav-link " href="./views/productos.html">Libros</a>
-                                
+
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Editorial</a>
@@ -45,47 +45,47 @@
         </div>
 
         <div class="row container content-home">
-        <div class="content-home col-sm-12 col-md-12 col-lg-12"></div>
-        <div class="carrousel container ">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
+            <div class="content-home col-sm-12 col-md-12 col-lg-12"></div>
+            <div class="carrousel container ">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../assets/media/slide1.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/media/slide2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/media/slide3.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../assets/media/slide1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/media/slide2.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/media/slide3.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
-        </div>
         </div>
 
         <div class="row">
             <div class="metodode col-sm-12 col-md-12 col-lg-12">
                 <div class="gp">
                     <h2><i class="fas fa-truck-moving"></i>envios a todo el pais</h2>
-                <p>Entregas a tu domicilio o trabajo</p>
+                    <p>Entregas a tu domicilio o trabajo</p>
                 </div>
                 <div class="gp">
                     <h2><i class="far fa-credit-card"></i>paga como quieras</h2>
@@ -104,37 +104,98 @@
                 <h1><i class="fas fa-bookmark"></i>Libros que seguro estas buscando</h1>
             </div>
         </div>
-        <div class="row libros-onfire">
-            <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
-                <img src="../assets/media/libros/la-vida-invisible-de.jpg" alt="La vida invisible de Deaddie Larue">
-                <h2>La vida Invisible de Addie Larue</h2>
-                <p><del>$2150</del>  $1800</p>
-                <a href="#" class="btn">Comprar</a>
-            </div>
-            <div class="books-content">
-                <img src="../assets/media/libros/lore.png" alt="">
-                <h2>Lore </h2>
-                <p>$1990</p>
-                <a href="#" class="btn">Comprar</a>
-            </div>
-            <div class="books-content">
-                <img src="../assets/media/libros/ultimo-mago.jpg" alt="">
-                <h2>El Ultimo Mago</h2>
-                <p>$1999</p>
-                <a href="#" class="btn">Comprar</a>
-            </div>
-        </div>
-    
-</div>
 
-<footer class="row">
-    <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
-        <h3>Redes Sociales</h3>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-pinterest"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row libros-onfire">
+                        <div class="books-content">
+                            <img src="../assets/media/libros/lore.png" alt="">
+                            <h2>Lore </h2>
+                            <p>$1990</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                        <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
+                            <img src="../assets/media/libros/la-vida-invisible-de.jpg" alt="La vida invisible de Deaddie Larue">
+                            <h2>La vida Invisible de Addie Larue</h2>
+                            <p><del>$2150</del>  $1800</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                        <div class="books-content">
+                            <img src="../assets/media/libros/ultimo-mago.jpg" alt="">
+                            <h2>El Ultimo Mago</h2>
+                            <p>$1999</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- carousel item -->
+                <div class="carousel-item">
+                    <div class="row libros-onfire">
+                        <div class="books-content">
+                            <img src="./assets/media/libros/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
+                            <h2>Las Lunas de Sartre </h2>
+                            <p>$1900</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                        <div class="books-content">
+                            <img src="./assets/media/libros/asedioytormenta.jpg" alt="Asedio y tormenta">
+                            <h2>Asedio y Tormenta</h2>
+                            <p>$2700</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                        <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
+                            <img src="./assets/media/libros/rey-maldito.jpg" alt="El Rey Malvado">
+                            <h2>El Rey Malvado</h2>
+                            <p><del>$2.800</del>  $2500</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- carousel item -->
+                <div class="carousel-item">
+                    <div class="row libros-onfire">
+                        <div class="books-content">
+                            <img src="./assets/media/libros/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
+                            <h2>Bajo las Estrellas</h2>
+                            <p>$1300</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                        <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
+                            <img src="./assets/media/libros/riverdale.jpg" alt="Riverdale">
+                            <h2>Riverdale El Dia Anterior</h2>
+                            <p>$1500</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                        <div class="books-content">
+                            <img src="./assets/media/libros/sabrina.jpg" alt="">
+                            <h2>Sabrina, El camino de la Bruja</h2>
+                            <p>$1500</p>
+                            <a href="#" class="btn">Comprar</a>
+                        </div>
+                    </div>                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </div>
+
+    <footer class="row">
+        <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
+            <h3>Redes Sociales</h3>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-pinterest"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+        </div>
 
         <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
             <h3>Navegacion</h3>
@@ -174,9 +235,13 @@
                 Copyright © Editoriales mencionadas
             </p>
         </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+        integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
