--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
-                            <img src="../assets/media/libros/la-vida-invisible-de.jpg" alt="La vida invisible de Deaddie Larue">
+                            <img src="../assets/media/libros/la-vida-invisible-de.jpg"
+                                alt="La vida invisible de Deaddie Larue">
                             <h2>La vida Invisible de Addie Larue</h2>
-                            <p><del>$2150</del>  $1800</p>
+                            <p><del>$2150</del> $1800</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content">
@@ -147,7 +148,7 @@
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
                             <img src="./assets/media/libros/rey-maldito.jpg" alt="El Rey Malvado">
                             <h2>El Rey Malvado</h2>
-                            <p><del>$2.800</del>  $2500</p>
+                            <p><del>$2.800</del> $2500</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -173,7 +174,8 @@
                             <p>$1500</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
-                    </div>                </div>
+                    </div>
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="prev">
