--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
     <meta charset="UTF-8">
+    <meta name="keywords" content="Atenas, Home, Libros, Libreria, Harry Potter, Lore, Ficcion, Romance, Tienda online, Descuentos"> 
+    <meta name="description" content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atenas Home</title>
