comence tarjetas de productos

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                             </li>
                         </ul>
                     </div>
+                    <a href="#"><i class="carrito fab fa-shopify"></i></a>
                 </div>
             </nav>
         </div>
