--- a/index.html
+++ b/index.html
@@ -113,20 +113,20 @@
                 <div class="carousel-item active">
                     <div class="row libros-onfire">
                         <div class="books-content">
-                            <img src="../assets/media/libros/lore.png" alt="">
+                            <img src="./assets/media/libros/fantasia/lore.png" alt="">
                             <h2>Lore </h2>
                             <p>$1990</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
-                            <img src="../assets/media/libros/la-vida-invisible-de.jpg"
+                            <img src="./assets/media/libros/ficcion/la-vida-invisible-de.jpg"
                                 alt="La vida invisible de Deaddie Larue">
                             <h2>La vida Invisible de Addie Larue</h2>
                             <p><del>$2150</del> $1800</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content">
-                            <img src="../assets/media/libros/ultimo-mago.jpg" alt="">
+                            <img src="./assets/media/libros/fantasia/ultimo-mago.jpg" alt="el ultimo mago">
                             <h2>El Ultimo Mago</h2>
                             <p>$1999</p>
                             <a href="#" class="btn">Comprar</a>
@@ -137,19 +137,19 @@
                 <div class="carousel-item">
                     <div class="row libros-onfire">
                         <div class="books-content">
-                            <img src="./assets/media/libros/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
+                            <img src="./assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
                             <h2>Las Lunas de Sartre </h2>
                             <p>$1900</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content">
-                            <img src="./assets/media/libros/asedioytormenta.jpg" alt="Asedio y tormenta">
+                            <img src="./assets/media/libros/fantasia/asedioytormenta.jpg" alt="Asedio y tormenta">
                             <h2>Asedio y Tormenta</h2>
                             <p>$2700</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
-                            <img src="./assets/media/libros/rey-maldito.jpg" alt="El Rey Malvado">
+                            <img src="./assets/media/libros/fantasia/rey-maldito.jpg" alt="El Rey Malvado">
                             <h2>El Rey Malvado</h2>
                             <p><del>$2.800</del> $2500</p>
                             <a href="#" class="btn">Comprar</a>
@@ -160,19 +160,19 @@
                 <div class="carousel-item">
                     <div class="row libros-onfire">
                         <div class="books-content">
-                            <img src="./assets/media/libros/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
+                            <img src="./assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
                             <h2>Bajo las Estrellas</h2>
                             <p>$1300</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
-                            <img src="./assets/media/libros/riverdale.jpg" alt="Riverdale">
+                            <img src="./assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
                             <h2>Riverdale El Dia Anterior</h2>
                             <p>$1500</p>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                         <div class="books-content">
-                            <img src="./assets/media/libros/sabrina.jpg" alt="">
+                            <img src="./assets/media/libros/ficcion/sabrina.jpg" alt="">
                             <h2>Sabrina, El camino de la Bruja</h2>
                             <p>$1500</p>
                             <a href="#" class="btn">Comprar</a>
@@ -193,53 +193,56 @@
         </div>
     </div>
 
-    <footer class="row">
-        <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
-            <h3>Redes Sociales</h3>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-pinterest"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
+                <h3>Redes Sociales</h3>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+            </div>
+    
+            <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
+                <h3>Navegacion</h3>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Editorial</a>
+                </li>
+                <li>
+                    <a href="#">Libros</a>
+                </li>
+                <li>
+                    <a href="#">Informacion</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+            <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
+                <h3>Libros</h3>
+                <li>Ficcion</li>
+                <li>Fantasia</li>
+                <li>Romance</li>
+                <li>Terror</li>
+            </ul>
+            <ul class="editoriales-footer col col-sm-12 col-md-6 col-lg-3">
+                <h3>Editoriales</h3>
+                <li>Salamandra</li>
+                <li>Hidra Editorial</li>
+                <li>Naranja</li>
+                <li>Vyr Editorial</li>
+                <li>Puck Editorial</li>
+            </ul>
+            <div class="row fila-copy-footer">
+                <p class="copyright col col-sm-12 col-md-12 col-lg-12">
+                    Copyright © Editoriales mencionadas
+                </p>
+            </div>
         </div>
 
-        <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
-            <h3>Navegacion</h3>
-            <li>
-                <a href="./index.html">Home</a>
-            </li>
-            <li>
-                <a href="#">Editorial</a>
-            </li>
-            <li>
-                <a href="#">Libros</a>
-            </li>
-            <li>
-                <a href="#">Informacion</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-        </ul>
-        <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
-            <h3>Libros</h3>
-            <li>Ficcion</li>
-            <li>Fantasia</li>
-            <li>Romance</li>
-            <li>Terror</li>
-        </ul>
-        <ul class="editoriales-footer col col-sm-12 col-md-6 col-lg-3">
-            <h3>Editoriales</h3>
-            <li>Salamandra</li>
-            <li>Hidra Editorial</li>
-            <li>Naranja</li>
-            <li>Vyr Editorial</li>
-            <li>Puck Editorial</li>
-        </ul>
-        <div class="row fila-copy-footer">
-            <p class="copyright col col-sm-12 col-md-12 col-lg-12">
-                Copyright © Editoriales mencionadas
-            </p>
-        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
         integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
