--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                             </li>
                         </ul>
                     </div>
+                    <nav class="navbar navbar-light ">
+                        <div class="container-fluid">
+                            <form class="d-flex">
+                                <input class="form-control me-2" type="search" placeholder="Search"
+                                    aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form>
+                        </div>
+                    </nav>
                     <a href="#"><i class="carrito fab fa-shopify"></i></a>
                 </div>
             </nav>
