hice pagina editorial vyr

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Editorial</a>
+                                <a class="nav-link" href="./views/editorial.html">Editorial</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
