--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <img src="./assets/media/libros/fantasia/lore.png" alt="">
                             <h2>Lore </h2>
                             <p>$1990</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Comprar</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
                             <img src="./assets/media/libros/ficcion/la-vida-invisible-de.jpg"
@@ -149,7 +149,7 @@
                             <img src="./assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
                             <h2>Las Lunas de Sartre </h2>
                             <p>$1900</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/sartre.html" class="btn">Comprar</a>
                         </div>
                         <div class="books-content">
                             <img src="./assets/media/libros/fantasia/asedioytormenta.jpg" alt="Asedio y tormenta">
@@ -172,19 +172,19 @@
                             <img src="./assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
                             <h2>Bajo las Estrellas</h2>
                             <p>$1300</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/bajolasestrellas.html" class="btn">Comprar</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
                             <img src="./assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
                             <h2>Riverdale El Dia Anterior</h2>
                             <p>$1500</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/riverdale.html" class="btn">Comprar</a>
                         </div>
                         <div class="books-content">
                             <img src="./assets/media/libros/ficcion/sabrina.jpg" alt="">
                             <h2>Sabrina, El camino de la Bruja</h2>
                             <p>$1500</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/sabrina.html" class="btn">Comprar</a>
                         </div>
                     </div>
                 </div>
