--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                                 alt="La vida invisible de Deaddie Larue">
                             <h2>La vida Invisible de Addie Larue</h2>
                             <p><del>$2150</del> $1800</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Comprar</a>
                         </div>
                         <div class="books-content">
                             <img src="./assets/media/libros/fantasia/ultimo-mago.jpg" alt="el ultimo mago">
                             <h2>El Ultimo Mago</h2>
                             <p>$1999</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -155,13 +155,13 @@
                             <img src="./assets/media/libros/fantasia/asedioytormenta.jpg" alt="Asedio y tormenta">
                             <h2>Asedio y Tormenta</h2>
                             <p>$2700</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Comprar</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
                             <img src="./assets/media/libros/fantasia/rey-maldito.jpg" alt="El Rey Malvado">
                             <h2>El Rey Malvado</h2>
                             <p><del>$2.800</del> $2500</p>
-                            <a href="#" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Comprar</a>
                         </div>
                     </div>
                 </div>
