--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="index container">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container atenas">
-                    <a class="logo navbar-brand" href="./index.html">Atenas</a>
+                    <a class="logo navbar-brand" href="./index.html">Atenass</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
