--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
     <meta charset="UTF-8">
-    <meta name="keywords" content="Atenas, Home, Libros, Libreria, Harry Potter, Lore, Ficcion, Romance, Tienda online, Descuentos"> 
-    <meta name="description" content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
+    <meta name="keywords"
+        content="Atenas, Home, Libros, Libreria, Harry Potter, Lore, Ficcion, Romance, Tienda online, Descuentos">
+    <meta name="description"
+        content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atenas Home</title>
@@ -45,8 +47,7 @@
                     <nav class="navbar navbar-light ">
                         <div class="container-fluid">
                             <form class="d-flex">
-                                <input class="form-control me-2" type="search" placeholder="Search"
-                                    aria-label="Search">
+                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                                 <button class="btn btn-outline-success" type="submit">Search</button>
                             </form>
                         </div>
@@ -211,7 +212,7 @@
                 <a href="#"><i class="fab fa-pinterest"></i></a>
                 <a href="#"><i class="fab fa-facebook"></i></a>
             </div>
-    
+
             <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
                 <h3>Navegacion</h3>
                 <li>
