--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <a class="nav-link" href="./views/editorial.html">Editorial</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="./views/contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
