realice todos los cambios necesarios

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
                                 <a class="nav-link" href="./views/editorial.html">Editorial</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./views/contact.html">Contact</a>
+                                <a class="nav-link" href="./views/contact.html">Contactanos</a>
                             </li>
                         </ul>
                     </div>
                     <nav class="navbar navbar-light ">
                         <div class="container-fluid">
                             <form class="d-flex">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success" type="submit">Search</button>
+                                <input class="form-control me-2" type="search" placeholder="buscar" aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Buscar</button>
                             </form>
                         </div>
                     </nav>
@@ -216,7 +216,7 @@
             <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
                 <h3>Navegacion</h3>
                 <li>
-                    <a href="./index.html">Home</a>
+                    <a href="./index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="#">Editorial</a>
@@ -228,7 +228,7 @@
                     <a href="#">Informacion</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Contactanos</a>
                 </li>
             </ul>
             <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
