--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <nav class="navbar navbar-light ">
                         <div class="container-fluid">
                             <form class="d-flex">
-                                <input class="form-control me-2" type="search" placeholder="buscar" aria-label="Search">
+                                <input class="form-control me-2" id="buscar" type="search" placeholder="buscar" aria-label="Search">
                                 <button class="btn btn-outline-success" type="submit">Buscar</button>
                             </form>
                         </div>
@@ -126,20 +126,20 @@
                             <img src="./assets/media/libros/fantasia/lore.png" alt="">
                             <h2>Lore </h2>
                             <p>$1990</p>
-                            <a href="./views/terror.html" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Add Cart</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
                             <img src="./assets/media/libros/ficcion/la-vida-invisible-de.jpg"
                                 alt="La vida invisible de Deaddie Larue">
                             <h2>La vida Invisible de Addie Larue</h2>
                             <p><del>$2150</del> $1800</p>
-                            <a href="./views/terror.html" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Add Cart</a>
                         </div>
                         <div class="books-content">
                             <img src="./assets/media/libros/fantasia/ultimo-mago.jpg" alt="el ultimo mago">
                             <h2>El Ultimo Mago</h2>
                             <p>$1999</p>
-                            <a href="./views/terror.html" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Add Cart</a>
                         </div>
                     </div>
                 </div>
@@ -150,19 +150,19 @@
                             <img src="./assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
                             <h2>Las Lunas de Sartre </h2>
                             <p>$1900</p>
-                            <a href="./views/sartre.html" class="btn">Comprar</a>
+                            <a href="./views/sartre.html" class="btn">Add Cart</a>
                         </div>
                         <div class="books-content">
                             <img src="./assets/media/libros/fantasia/asedioytormenta.jpg" alt="Asedio y tormenta">
                             <h2>Asedio y Tormenta</h2>
                             <p>$2700</p>
-                            <a href="./views/terror.html" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Add Cart</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
                             <img src="./assets/media/libros/fantasia/rey-maldito.jpg" alt="El Rey Malvado">
                             <h2>El Rey Malvado</h2>
                             <p><del>$2.800</del> $2500</p>
-                            <a href="./views/terror.html" class="btn">Comprar</a>
+                            <a href="./views/terror.html" class="btn">Add Cart</a>
                         </div>
                     </div>
                 </div>
@@ -173,19 +173,19 @@
                             <img src="./assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
                             <h2>Bajo las Estrellas</h2>
                             <p>$1300</p>
-                            <a href="./views/bajolasestrellas.html" class="btn">Comprar</a>
+                            <a href="./views/bajolasestrellas.html" class="btn">Add Cart</a>
                         </div>
                         <div class="books-content col-12 col-sm-12 col-md-6 col-lg-4">
                             <img src="./assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
                             <h2>Riverdale El Dia Anterior</h2>
                             <p>$1500</p>
-                            <a href="./views/riverdale.html" class="btn">Comprar</a>
+                            <a href="./views/riverdale.html" class="btn">Add Cart</a>
                         </div>
                         <div class="books-content">
                             <img src="./assets/media/libros/ficcion/sabrina.jpg" alt="">
                             <h2>Sabrina, El camino de la Bruja</h2>
                             <p>$1500</p>
-                            <a href="./views/sabrina.html" class="btn">Comprar</a>
+                            <a href="./views/sabrina.html" class="btn">Add Cart</a>
                         </div>
                     </div>
                 </div>
